--- a/check.html
+++ b/check.html
@@ -4,14 +4,14 @@
 <p><a href="https://linearjitp.perfecttv.net/premier1.mpd" target="_blank">EPL 1</a>.</p>
 <p><a href="https://linearjitp.perfecttv.net/premier2.mpd" target="_blank">EPL 2</a>.</p>
 <b>//////////////////</b>
-==
+<p>==</p>
 <p><a href="https://linearjitp.perfecttv.net/ria.mpd" target="_blank">Ria</a>.</p>
 <p><a href="https://tinyurl.com/playRia0" target="_blank">playRia0</a>.</p>
-==
+<p>==</p>
 <p><a href="https://linearjitp.perfecttv.net/citra.mpd" target="_blank">Citra</a>.</p>
 <p><a href="https://tinyurl.com/playcit0" target="_blank">PlayCit0</a>.</p>
-==
-<p><a href="https://linearjitp.perfecttv.net/prima.mpd" target="_blank">playPrima0</a>.</p>
+<p>==</p>
+<p><a href="https://linearjitp.perfecttv.net/prima.mpd" target="_blank">Prima</a>.</p>
 <p><a href="https://tinyurl.com/playprim0" target="_blank">playPrima0</a>.</p>
 <b>//////////////////</b>
 <p><a href="https://ht7mvvlb8c.execute-api.ap-southeast-1.amazonaws.com/qj.mpd" target="_blank">QJ</a>.</p>
