--- a/token/primaz.html
+++ b/token/primaz.html
@@ -1,4 +1,4 @@
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://jouwaikekaivep.net/tag.min.js',7337458,document.body||document.documentElement)</script>
+m<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://jouwaikekaivep.net/tag.min.js',7337458,document.body||document.documentElement)</script>
 <script src="https://content.jwplatform.com/libraries/Z79JsmAO.js"></script>
 <div id="jwplayerDiv"></div>
 <script>	
@@ -7,7 +7,7 @@ jwplayer("jwplayerDiv").setup({
   width: "100%",
   height: "680",
   autostart: true,
-        file: "https://linears-playback.astro.com.my/vsg/41MLmbISM9jsA0cNBKMo9XlIxlFpQNwDH0PWrICCipxd0=12tP/dash-wv/jitp-linearwm/1000/default_primary.mpd",
+        file: "https://linears-playback.astro.com.my/vsg/41l4PPHfAXkoeXe8kQNa8H2aQvrEFvaAOrHzhSTzCytBE=eTRU/dash-wv/jitp-linearwm/1000/default_primary.mpd",
 		//type: "dash",
 	    drm: {
 	        clearkey: {
