--- a/token/primaz.html
+++ b/token/primaz.html
@@ -1,4 +1,4 @@
-m<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://jouwaikekaivep.net/tag.min.js',7337458,document.body||document.documentElement)</script>
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://jouwaikekaivep.net/tag.min.js',7337458,document.body||document.documentElement)</script>
 <script src="https://content.jwplatform.com/libraries/Z79JsmAO.js"></script>
 <div id="jwplayerDiv"></div>
 <script>	
