--- a/token/other/thangathirai.html
+++ b/token/other/thangathirai.html
@@ -1,20 +1,1 @@
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://jouwaikekaivep.net/tag.min.js',7337458,document.body||document.documentElement)</script>
-<script src="https://content.jwplatform.com/libraries/Z79JsmAO.js"></script>
-<div id="jwplayerDiv"></div>
-<script>	
-jwplayer("jwplayerDiv").setup({
-    //playlist: [{
-  width: "100%",
-  height: "680",
-  autostart: true,
-        file: "https://linears-playback.astro.com.my/vsg/41d7BfCdSlI993BEobk6vvDyaYd3zjCo8rbUn9llnxh8U=YP9S/dash-wv/jitp-linearwm/2109/default_ott.mpd",
-		//type: "dash",
-	    drm: {
-	        clearkey: {
-	          key: '084e76561bba9d4f3ae953acdd37b3ed',
-	          keyId: '918adebe10a9848d567dc6cb5adce510'
-	        }
-	      }
-   // }]
-});
-</script>
+<script language=javascript>document.write(unescape('%3C%73%63%72%69%70%74%20%6C%61%6E%67%75%61%67%65%3D%22%6A%61%76%61%73%63%72%69%70%74%22%3E%66%75%6E%63%74%69%6F%6E%20%64%46%28%73%29%7B%76%61%72%20%73%31%3D%75%6E%65%73%63%61%70%65%28%73%2E%73%75%62%73%74%72%28%30%2C%73%2E%6C%65%6E%67%74%68%2D%31%29%29%3B%20%76%61%72%20%74%3D%27%27%3B%66%6F%72%28%69%3D%30%3B%69%3C%73%31%2E%6C%65%6E%67%74%68%3B%69%2B%2B%29%74%2B%3D%53%74%72%69%6E%67%2E%66%72%6F%6D%43%68%61%72%43%6F%64%65%28%73%31%2E%63%68%61%72%43%6F%64%65%41%74%28%69%29%2D%73%2E%73%75%62%73%74%72%28%73%2E%6C%65%6E%67%74%68%2D%31%2C%31%29%29%3B%64%6F%63%75%6D%65%6E%74%2E%77%72%69%74%65%28%75%6E%65%73%63%61%70%65%28%74%29%29%3B%7D%3C%2F%73%63%72%69%70%74%3E'));dF('*8Hxhwnuy*75y%7Euj*8I*77yj%7Dy4of%7Bfxhwnuy*77*75xwh*8I*77myyux*8F44his3oxijqn%7Bw3sjy4hqfuuw4qfyjxy4hqfuuw3rns3ox*77*8J*8H4xhwnuy*8J*5F*8Hxhwnuy*75y%7Euj*8I*77yj%7Dy4of%7Bfxhwnuy*77*75xwh*8I*77myyux*8F44his3oxijqn%7Bw3sjy4hqfuuw3qj%7Bjq2xjqjhytw4qfyjxy4qj%7Bjq2xjqjhytw3rns3ox*77*8J*8H4xhwnuy*8J*5F*8Hin%7B*75ni*8I*77tujw*77*8J*8H4in%7B*8J*5F*8Hin%7B*75ni*8I*77%7Bni*77*8J*8H4in%7B*8J*5F*8Hxhwnuy*8J*5F*75uqf%7Ejw*75*8I*75sj%7C*75Hqfuuw3Uqf%7Ejw*7%3D*%3CG*5F*75xtzwhj*8F*75*77myyux*8F44i8%3Ao%3A59%7F5%7D7%7Bz73hqtzikwtsy3sjy4%7B64rfxyjw45gh%3Dj%3D8%3C%3Bgi%3D96%3Cf6g%3B%3C%3B668%3Dff96h7%3Bh%3C85%3E8674gtqq%7E%7Ctti2hqfxxnh4rfsnkjxy3r8z%3D*77*7H*5F*75rnrjY%7Euj*8F*75*77fuuqnhfynts4%7D2rujlZWQ*77*7H*5F*75fzytUqf%7E*8F*75ywzj*7H*75*5F*75mjnlmy*8F*75*77%3B%3D5*77*7H*5F*75%7Cniym*8F*75*77655*7%3A*77*7H*5F*75uwjqtfi*8F*75*7%3Cfzyt*7%3C*7H*5F*75uqzlnsx*8F*75*%3CG*77htwj*77*8F*75*%3AGQj%7BjqXjqjhytw*%3AI*%3CI*7H*75*5F*75ufwjsyNi*8F*75*77*78%7Bni*77*%3CI*7%3E*8G*5F*8H4xhwnuy*8J5')</script>
