--- a/check.html
+++ b/check.html
@@ -1,3 +1,12 @@
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+<p><a href="https://astrox.short.gy/citra.mpd" target="_blank">Citra</a>.</p>
+<p><a href="https://astrox.short.gy/aec.mpd" target="_blank">AEC</a>.</p>
+<p><a href="https://astrox.short.gy/quanjia.mpd" target="_blank">QJ</a>.</p>
+<p><a href="https://astrox.short.gy/thangathirai.mpd" target="_blank">ABO Thangathirai</a>.</p>
+<p><a href="https://astrox.short.gy/vinmeen.mpd" target="_blank">Vinmeen</a>.</p>
+<b>//////////////////</b>
+<b>//////////////////</b>
+<b>//////////////////</b>
 <p><a href="https://linearjitp.perfecttv.net/bola1.mpd" target="_blank">Bola1</a>.</p>
 <p><a href="https://linearjitp.perfecttv.net/bola2.mpd" target="_blank">Bola2</a>.</p>
 <p><a href="https://linearjitp.perfecttv.net/grand.mpd" target="_blank">Grandstand</a>.</p>
@@ -5,16 +14,5 @@
 <p><a href="https://linearjitp.perfecttv.net/premier2.mpd" target="_blank">EPL 2</a>.</p>
 <b>//////////////////</b>
 <p>==</p>
-<p><a href="https://linearjitp.perfecttv.net/ria.mpd" target="_blank">Ria</a>.</p>
-<p><a href="https://tinyurl.com/playRia0" target="_blank">playRia0</a>.</p>
-<p>==</p>
-<p><a href="https://linearjitp.perfecttv.net/citra.mpd" target="_blank">Citra</a>.</p>
-<p><a href="https://tinyurl.com/playcit0" target="_blank">PlayCit0</a>.</p>
-<p>==</p>
-<p><a href="https://linearjitp.perfecttv.net/prima.mpd" target="_blank">Prima</a>.</p>
-<p><a href="https://tinyurl.com/playprim0" target="_blank">playPrima0</a>.</p>
 <b>//////////////////</b>
-<p><a href="https://ht7mvvlb8c.execute-api.ap-southeast-1.amazonaws.com/qj.mpd" target="_blank">QJ</a>.</p>
-<p><a href="https://ht7mvvlb8c.execute-api.ap-southeast-1.amazonaws.com/aec.mpd" target="_blank">AEC</a>.</p>
-<p><a href="https://linearjitp.perfecttv.net/abo.mpd" target="_blank">ABO Thangathirai</a>.</p>
-<p><a href="https://linearjitp.perfecttv.net/vinmeen.mpd" target="_blank">Vinmeen</a>.</p>
+
