--- a/token/other/thangathirai.html
+++ b/token/other/thangathirai.html
@@ -5,6 +5,7 @@ jwplayer("jwplayerDiv").setup({
     //playlist: [{
   width: "100%",
   height: "680",
+autostart: true,
         file: "https://linears-playback.astro.com.my/vsg/41-eFavu5X0Z_ze-vjyNMzbSkK95TCYPrkEerk02HoT1Y=bdLA/dash-wv/jitp-linearwm/2109/default_ott.mpd",
 		//type: "dash",
 	    drm: {
