--- a/token/citraz.html
+++ b/token/citraz.html
@@ -5,6 +5,7 @@ jwplayer("jwplayerDiv").setup({
     //playlist: [{
   width: "100%",
   height: "680",
+autostart: true,
         file: "https://5a30e597573846ffb4d14c961da73e57.mediatailor.ap-southeast-1.amazonaws.com/v1/dash/ceb8322ae2e84c32cb0fce196fdc60100025ab50/MT-CH5-dash/vsg/41RnEdDC4lAGBIZrX7W0fEeBNre2y31lMmpWfo2Nfe97k=T83G/dash-wv/jitp-dashisowm/2700/default_ott.mpd?aws.sessionId=713f7f07-3261-4fb4-b77e-4c9ebf7e0310",
 		//type: "dash",
 	    drm: {
