--- a/token/other/vinmeen.html
+++ b/token/other/vinmeen.html
@@ -5,6 +5,7 @@ jwplayer("jwplayerDiv").setup({
     //playlist: [{
   width: "100%",
   height: "680",
+autostart: true,
         file: "https://linears-playback.astro.com.my/vsg/41VKnMTkY_gOvxvPAczD_0SStxSuwzg7DXvR5GXKH0gAo=sjAb/dash-wv/jitp-dashisowm/2105/default_ott.mpd",
 		//type: "dash",
 	    drm: {
