--- a/check.html
+++ b/check.html
@@ -1,18 +1,14 @@
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+<p><a href="https://astrox.short.gy/arenabola1.mpd" target="_blank">Bola1</a>.</p>
+<p><a href="https://astrox.short.gy/arenabola2.mpd" target="_blank">Bola2</a>.</p>
+<p><a href="https://astrox.short.gy/grandstand.mpd" target="_blank">Grandstand</a>.</p>
+<p><a href="https://astrox.short.gy/premierleague1.mpd" target="_blank">EPL 1</a>.</p>
+<p><a href="https://astrox.short.gy/premierleague2.mpd" target="_blank">EPL 2</a>.</p>
+<p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+<p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+<p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
 <p><a href="https://astrox.short.gy/citra.mpd" target="_blank">Citra</a>.</p>
 <p><a href="https://astrox.short.gy/aec.mpd" target="_blank">AEC</a>.</p>
 <p><a href="https://astrox.short.gy/quanjia.mpd" target="_blank">QJ</a>.</p>
 <p><a href="https://astrox.short.gy/thangathirai.mpd" target="_blank">ABO Thangathirai</a>.</p>
 <p><a href="https://astrox.short.gy/vinmeen.mpd" target="_blank">Vinmeen</a>.</p>
 <b>//////////////////</b>
-<b>//////////////////</b>
-<b>//////////////////</b>
-<p><a href="https://linearjitp.perfecttv.net/bola1.mpd" target="_blank">Bola1</a>.</p>
-<p><a href="https://linearjitp.perfecttv.net/bola2.mpd" target="_blank">Bola2</a>.</p>
-<p><a href="https://linearjitp.perfecttv.net/grand.mpd" target="_blank">Grandstand</a>.</p>
-<p><a href="https://linearjitp.perfecttv.net/premier1.mpd" target="_blank">EPL 1</a>.</p>
-<p><a href="https://linearjitp.perfecttv.net/premier2.mpd" target="_blank">EPL 2</a>.</p>
-<b>//////////////////</b>
-<p>==</p>
-<b>//////////////////</b>
-
