--- a/check.html
+++ b/check.html
@@ -4,11 +4,11 @@
 <p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
 <p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
 <p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
-<p><a href="https://astrox.short.gy/arenabola1.mpd" target="_blank">Bola1</a>.</p>
-<p><a href="https://astrox.short.gy/arenabola2.mpd" target="_blank">Bola2</a>.</p>
+<p><a href="https://wakutv.site/bola1.mpd" target="_blank">Bola1</a>.</p>
+<p><a href="https://wakutv.site/bola2.mpd" target="_blank">Bola2</a>.</p>
 <p><a href="https://astrox.short.gy/grandstand.mpd" target="_blank">Grandstand</a>.</p>
-<p><a href="https://astrox.short.gy/premierleague1.mpd" target="_blank">EPL 1</a>.</p>
-<p><a href="https://astrox.short.gy/premierleague2.mpd" target="_blank">EPL 2</a>.</p>
+<p><a href="https://wakutv.site/epl1.mpd" target="_blank">EPL 1</a>.</p>
+<p><a href="https://wakutv.site/epl2.mpd" target="_blank">EPL 2</a>.</p>
 <p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
 <p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
 <p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
